--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "async": "^2.1.4",
     "express": "^4.14.0",
-    "passport-google-oauth": "^1.0.0"
+    "passport-google-oauth": "^1.0.0",
+    "sqlite3": "^3.1.8"
   }
 }
