--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   "readme": "../README.md",
   "dependencies": {
     "async": "^2.1.4",
+    "body-parser": "^1.15.2",
+    "connect-ensure-login": "^0.1.1",
+    "ejs": "^2.5.5",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
+    "fitbit-node": "^2.0.5",
+    "passport": "^0.3.2",
+    "passport-fitbit-oauth2": "^1.0.2",
     "passport-google-oauth": "^1.0.0",
     "sqlite3": "^3.1.8"
   }
