--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "fitbit-node": "^2.0.5",
+    "googleapis": "^16.0.0",
     "moment": "^2.17.1",
     "passport": "^0.3.2",
     "passport-fitbit-oauth2": "^1.0.2",
