--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "async": "^2.1.4",
     "body-parser": "^1.15.2",
     "connect-ensure-login": "^0.1.1",
+    "dygraphs": "^2.0.0",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
