--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport": "^0.3.2",
     "passport-fitbit-oauth2": "^1.0.2",
     "passport-google-oauth": "^1.0.0",
+    "request": "^2.88.0",
     "sha1": "^1.1.1",
     "sqlite3": "^3.1.8",
     "sqlite3-transactions": "0.0.5"
