retry remote operations

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport-google-oauth": "^1.0.0",
     "regression": "^2.0.1",
     "request": "^2.88.0",
+    "retry": "^0.12.0",
     "sha1": "^1.1.1",
     "sqlite3": "^3.1.8",
     "sqlite3-transactions": "0.0.5"
